--- a/doc/source/news/13.md
+++ b/doc/source/news/13.md
@@ -1245,7 +1245,7 @@
 - [{ref}`query-syntax-near-search-condition`][{ref}`script-syntax-near-search-operator`]
   Added a new option `${MIN_INTERVAL}` for near-search family.
 
-  We can now specifiy the minimum interval between phrases (words) with `${MIN_INTERVAL}`.
+  We can now specify the minimum interval between phrases (words) with `${MIN_INTERVAL}`.
   The interval between phrases (words) must be at least this value.
 
   Here are new syntax:
