--- a/doc/source/news/14.md
+++ b/doc/source/news/14.md
@@ -201,7 +201,7 @@ It's useful when you use {ref}`query-log` too. In {ref}`query-log`, the context 
 
 [GH-2104](https://github.com/groonga/groonga/issues/2104)
 
-There was a case that wastes key space. Now, we can use key space as efficiency as possible.
+There was a case that wastes key space. Now, we can use key space as efficiently as possible.
 
 ### Fixes
 
@@ -773,7 +773,7 @@ You can use {doc}`/reference/commands/index_column_diff` to detect index corrupt
   However, If this problem occur, Groonga returns match record.
   Because if we use `query_parallel_or()`, `match_escalation_threshold` doesn't work.
 
-- Fixed a bug that full-text search againt a reference column of a vector didn't work.
+- Fixed a bug that full-text search against a reference column of a vector didn't work.
 
   This problem has occured Groonga v14.0.0 or later.
   This problem has effect if we execute full-text search against a reference column of a vector.
@@ -1332,9 +1332,9 @@ You can use {doc}`/reference/commands/index_column_diff` to detect index corrupt
 - [{doc}`/install/ubuntu`] We become able to provide package for Ubuntu again.
 
   We don't provide packages for Ubuntu in Groonga version 14.0.0.
-  Because we fail makeing Groonga package for Ubuntu by problrm of build environment for Ubuntu package.
+  Because we fail making Groonga package for Ubuntu by problem of build environment for Ubuntu package.
 
-  We fixed problrm of build environment for Ubuntu package in 14.0.1. So, we can provide packages for Ubuntu again since this release.
+  We fixed problem of build environment for Ubuntu package in 14.0.1. So, we can provide packages for Ubuntu again since this release.
 
 - Fixed build error when we build from source by using [`clang`](https://clang.llvm.org/). [GitHub#1738][Reported by windymelt]
 
@@ -1369,7 +1369,7 @@ But It keeps backward compatibility. We can upgrade to 14.0.0 without rebuilding
 
   These functions calculate distance in the `output` stage.
 
-  However, we don't optimaize these functions yet.
+  However, we don't optimize these functions yet.
 
   - `distance_cosine()`: Calculate cosine similarity.
   - `distance_inner_product()`: Calculate inner product.
