--- a/doc/source/news/2.rst
+++ b/doc/source/news/2.rst
@@ -84,7 +84,7 @@ Release 2.1.0 - 2012-12-29
    database at least once, you can not open its database by old
    version of groonga.
 
-   There is also another backward incompatible change agaist plugin API for
+   There is also another backward incompatible change against plugin API for
    tokenizer. The argument of ``grn_tokenizer_query_open`` API has changed.
    This API change affects developer of tokenizer plugin.
 
@@ -137,7 +137,7 @@ Release 2.0.9 - 2012-11-29
 Improvements
 ^^^^^^^^^^^^
 
-* Supported to calculate the value of distance accross border
+* Supported to calculate the value of distance across border
   in ``geo_distance`` with ``rectangle`` as approximate type. [#1534]
 * [doc] Added the :doc:`/spec/gqtp` specification.
 * Improved to ignore non critical ``getaddrinfo()`` error which groonga command emits on startup.
@@ -146,7 +146,7 @@ Improvements
 * [experimental] Added ``snippet_html()`` function which extract keyword and surrounding text.
   See :doc:`/reference/functions/snippet_html` about details.
 * Supported to report error reason when error occured during reading table record.
-* Supported to search with keyword by nested index notation ( concatinate multiple 
+* Supported to search with keyword by nested index notation ( concatenate multiple
   indexed column name with dot character ) if there is a relationship between
   multiple table with index.
 * Supported to log "[tokenizer][mecab]" tag when using ``TokenMecab`` tokenizer.
@@ -437,7 +437,7 @@ Improvements
 * Started using Travis CI.
 * [yum] Changed RPM package name that provides yum repository from
   groonga-repository to groonga-release to follow RPM package name
-  convension such as centos-release and fedora-release.
+  convention such as centos-release and fedora-release.
 
 Fixes
 ^^^^^
@@ -483,7 +483,7 @@ Improvements
 * [pkg-config] Removed needless MessagePack dependency.
 * [rpm][fedora] Supported libedit. [#1325] [Suggested by IWAI, Masaharu]
 * [rpm] Supported zlib and LZO. [#1324] [Patch by IWAI, Masaharu]
-* [groonga] Improved daemoinzed timing. Groonga server daemonizes
+* [groonga] Improved daemonized timing. Groonga server daemonizes
   after socket is listened. It means that groonga server is ready when
   groonga server is daemonized. [#1326]
 * [admin] Supported suggest in groonga administration page.
@@ -510,11 +510,11 @@ Fixes
 * [rpm] Removed needless change logs. [#1328] [Patch by IWAI, Masaharu]
 * [deb][rpm] Added missing curl dependency.
   [GitHub#12] [Patch by IWAI, Masaharu]
-* [rpm] Removed needleess ruby package dependency from groonga package.
+* [rpm] Removed needless ruby package dependency from groonga package.
   [#1330] [Suggested by IWAI, Masaharu]
 * [deb] Added missing default values to groonga-server's
   configuration file.
-* Fixed a crash bug that is caused when searching with updaging very large
+* Fixed a crash bug that is caused when searching with updating very large
   inverted index. [#1329]
 * Fixed a bug that strings are compared as characters instead of byte string.
   [#1340] [Reported by Shinya Kawaji]
