--- a/doc/source/news/3.rst
+++ b/doc/source/news/3.rst
@@ -18,7 +18,7 @@ Improvements
 * Enabled ``GRN_JA_SKIP_SAME_VALUE_PUT`` by default. In the previous releases, the value of
   this configuration is 'no'. This change affects reducing the size of Groonga database.
 * Supported multiple indexes including a nested index and multiple keywords query.
-  This change improves missing search results isssue when narrowing down by multiple keywords query.
+  This change improves missing search results issue when narrowing down by multiple keywords query.
 * Added API to customize normalizer for snippet.
 
 Fixes
@@ -141,7 +141,7 @@ Improvements
 * [httpd] Supported multiple buffered body of POST request.
   The load command caused timeout in such a case. [GitHub #120] [Patch by Motoi Washida]
 * [gqtp] Supported error message. The body is changed to return
-  raw text insted of double quoted text. This is incompatible changes.
+  raw text instead of double quoted text. This is incompatible changes.
 * [http] Supported "400 Bad request" for invalid argument error.
 * [doc] Added examples for :doc:`/reference/suggest/completion`
 * Supported Ubuntu 13.10 (Saucy Salamander).
@@ -243,7 +243,7 @@ Fixes
 ^^^^^
 
 * Fixed a bug that error in expression may cause stack overflow.
-  This change avoids that groonga crashes suddenly as a result of error accumlation.
+  This change avoids that groonga crashes suddenly as a result of error accumulation.
 * Fixed a crash bug that offline index construction for vector column which has
   orphan reference causes.
 * Fixed a bug that groonga doesn't exit on error while daemon mode starts.
@@ -443,7 +443,7 @@ Improvements
   ``X /= Y``, ``X %= Y``, ``X <<= Y``, ``X >>= Y``, ``X >>>= Y``, ``X &= Y``,
   ``X |= Y`` and ``X ^= Y`` for Int8, UInt8, Int16, UInt16 and UInt64.
 * Supported unary operations such as ``-X`` for Int8, UInt8, Int16, UInt16 and UInt64.
-* Supported complex string concatination in ``--output_columns``.
+* Supported complex string concatenation in ``--output_columns``.
   For example, you can use a query such as ``--output_columns '"<" + title + ">"'``.
 * Added the information of the repository of groonga to development page.
 * Added ``sub_filter()`` function.
