--- a/doc/source/news/4.rst
+++ b/doc/source/news/4.rst
@@ -38,7 +38,7 @@ Fixes
 * Fixed mismatch between error code and error message when
   ``strerror()`` is failed. There was a case that Groonga shows
   incorrect error code as syscall error.
-* Fixed to show errno in error message when unknow error is occurred.
+* Fixed to show errno in error message when unknown error is occurred.
 * [windows] Fixed to return proper error code.
 * Fixed a bug that there is only one section for multi-column index for
   :ref:`select-match-columns`, it doesn't return correct search results.
@@ -620,7 +620,7 @@ Improvements
 * Supported :ref:`weight-vector-column`. You need to specify 'COLUMN_VECTOR|WITH_WEIGHT' flags 
   to create weight vector column.
 * Added missing MIN/MAX macros on SunOS. [GitHub#154] [Patch by Sebastian Wiedenroth]
-* Improved recycling garbage data. It suppress to increse database size.
+* Improved recycling garbage data. It suppress to increase database size.
 * [doc] Added documentation about GET parameters for :doc:`/reference/executables/groonga-suggest-httpd`.
 * [doc] Added documentation about :doc:`/reference/column`.
 * [doc] Added documentation about :doc:`/reference/columns/vector`.
