--- a/doc/source/news/7.rst
+++ b/doc/source/news/7.rst
@@ -320,7 +320,7 @@ Fixes
 * [windows] Fixed to clean up file handle correctly on failure when
   ``database_unmap`` is executed. There is a case that critical
   section is not initialized when request is canceled before executing
-  ``database_unmap``. In such a case, it caused a crach bug.
+  ``database_unmap``. In such a case, it caused a crash bug.
 
 * [:doc:`/reference/tokenizers`] Fixed document for wrong tokenizer
   names. It should be ``TokenBigramIgnoreBlankSplitSymbolAlpha`` and
@@ -331,7 +331,7 @@ Fixes
   In the previous versions, there is a case that empty file keeps
   remain on error.
 
-  Here is the senario to reproduce:
+  Here is the scenario to reproduce:
 
     1. creating new file by grn_fileinfo_open succeeds
     2. mapping file by DO_MAP() is failed
@@ -793,7 +793,7 @@ Fixes
   temporary database.
 
 * Fixed a problem that dynamically updated index size was increased
-  for natural language since Grooonga 6.1.4.
+  for natural language since Groonga 6.1.4.
 
 * [:doc:`/reference/commands/select`] Fixed a bug that "A && B.C @ X"
   may not return records that should be matched.
